# mendel-genetics.gaia

./: pyproject.toml
.gaia/: ir.json  ir_hash
mendel_genetics/: __init__.py
