[project]
name = "mendel-genetics-gaia"
version = "1.0.0"
description = "Mendel's laws of heredity — a Gaia Lang v5 knowledge package"
authors = [{name = "Gregor Mendel"}]
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["mendel_genetics*"]

[tool.gaia]
namespace = "reg"
type = "knowledge-package"
uuid = "b13694ea-7460-41df-94c6-4cb1677ff92b"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
